syntax = "proto3";

package com.dev.grpc;

option java_multiple_files = true;
//option java_outer_classname = "Document_proto";
option java_package = "com.dev.grpc";

message Document {
  User user = 1;
  repeated Post posts = 2;
  Settings settings = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  Address address = 4;
  int32 age = 5;
  string date_of_birth = 6;
  string created_at = 7;
}
message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  int32 zip = 4;
  Location location = 5;
}
message Location {
  double lat = 1;
  double lon = 2;
}
message Post {
  string post_id = 1;
  string title = 2;
  string content = 3;
  repeated string tags = 4;
  repeated Comment comments = 5;
  string created_at = 6;
}
message Comment {
  string comment_id = 1;
  string user_id = 2;
  string comment = 3;
  string created_at = 4;
}
message Settings {
  string theme = 1;
  repeated Notification notifications = 2;
  Privacy privacy = 3;
}
message Notification {
  string email = 1;
  string sms = 2;
  string push = 3;
}
message Privacy {
  string profile_visibility = 1;
  string search_visibility = 2;
}
message DocumentRequest {
  string document_id = 1;
}
message DocumentsResponse {
  repeated Document documents = 1;
  int32 count = 2;
}
message Empty {}

// Define services to operate on the messages
service DocumentService {
  rpc CreateDocument (Document) returns (Document);
  rpc GetDocument (DocumentRequest) returns (Document);
  rpc GetAllDocuments (Empty) returns (DocumentsResponse);
  rpc UpdateDocument (Document) returns (Document);
  rpc DeleteDocument (DocumentRequest) returns (Empty);
}
